--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <strong class="header-strong">Привет 👋</strong>
       <h1 class="header-heading">
         <span class="header-primery">Я фронтенд-разработчик и веб-дизайнер <br></span>
-        Меня зовут Артем Исламов и я делаю сайты для людей и компаний
+        Меня зовут Алексей Бакулин и я делаю сайты для людей и компаний
       </h1>
       <div class="header-links">
         <ul class="social-list">
@@ -47,5 +47,49 @@
       </div>
     </div>
   </header>
+  <!-- header-->
+  <section class="portfolio container">
+    <h2 class="section-heading">Последние проекты</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="img/portfolio/card-1.jpg" alt="Мобильное приложение" class="card-image">
+        <div class="card-text-wrapper">
+          <h3 class="card-title">Мобильное приложение</h3>
+          <ul class="tags">
+            <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+            <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+            <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+            <li class="tags-item"><a href="#" class="tag">Git</a></li>
+            <li class="tags-item"><a href="#" class="tag">Vitejs</a></li>
+          </ul>
+          <p class="card-text">
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <div class="card-buttons">
+            <a href="#" class="card-button"><img src="img/Icons/code.svg" alt="code-icon" class="card-button-icon"><span class="card-button-text">Код</span></a>
+            <a href="#" class="card-button"><img src="img/Icons/demo.svg" alt="demo-icon" class="card-button-icon"><span class="card-button-text">Демо</span></a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/portfolio/card-2.jpg" alt="Одностраничный промо-сайт" class="card-image">
+        <div class="card-text-wrapper">
+          <h3 class="card-title">Одностраничный промо-сайт</h3>
+          <ul class="tags">
+            <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+            <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+          </ul>
+          <p class="card-text">
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <div class="card-buttons">
+            <a href="#" class="card-button"><img src="img/Icons/code.svg" alt="code-icon" class="card-button-icon"><span class="card-button-text">Код</span></a>
+            <a href="#" class="card-button"><img src="img/Icons/demo.svg" alt="demo-icon" class="card-button-icon"><span class="card-button-text">Демо</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /.portfolio -->
 </body>
 </html>
