--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <nav class="nav">
       <ul class="nav-list">
         <li class="nav-item"><a href="/index.html" class="nav-link active">Главная</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Проекты</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Обо мне</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Связаться</a></li>
+        <li class="nav-item"><a href="#portfolio" class="nav-link">Проекты</a></li>
+        <li class="nav-item"><a href="#developer" class="nav-link">Обо мне</a></li>
+        <li class="nav-item"><a href="#feedback" class="nav-link">Связаться</a></li>
       </ul>
     </nav>
   </div>
-  <header class="header container">
+  <header class="header container" id="header">
     <img src="img/avatar.jpg" alt="Alexey" class="header-photo">
     <div class="header-text">
       <strong class="header-strong">Привет 👋</strong>
@@ -48,11 +48,11 @@
     </div>
   </header>
   <!-- header-->
-  <section class="portfolio container">
+  <section class="portfolio container" id="portfolio">
     <h2 class="section-heading">Последние проекты</h2>
     <div class="cards">
       <div class="card">
-        <img src="img/portfolio/card-1.jpg" alt="Мобильное приложение" class="card-image">
+        <img class="card-image" src="img/portfolio/card-1.jpg" alt="Мобильное приложение">
         <div class="card-text-wrapper">
           <h3 class="card-title">Мобильное приложение</h3>
           <ul class="tags">
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="img/portfolio/card-2.jpg" alt="Одностраничный промо-сайт" class="card-image">
+        <img class="card-image" src="img/portfolio/card-2.jpg" alt="Одностраничный промо-сайт">
         <div class="card-text-wrapper">
           <h3 class="card-title">Одностраничный промо-сайт</h3>
           <ul class="tags">
@@ -91,7 +91,7 @@
     </div>
   </section>
   <!-- /.portfolio -->
-  <section class="developer container">
+  <section class="developer container" id="developer">
     <img src="img/photo.jpg" alt="Alexey" class="developer-photo">
     <div class="developer-about">
       <span class="developer-hello">Рад вас видеть</span>
@@ -108,7 +108,7 @@
     </div>
   </section>
   <!-- /.developer contsiner -->
-  <section class="skills container">
+  <section class="skills container" id="skills">
     <h2 class="skills-title">Работаю с разными языками и инструментами</h2>
     <ul class="tags">
       <li class="tags-item"><a href="#" class="tag">HTML</a></li>
@@ -123,28 +123,31 @@
     </ul>
   </section>
   <!-- /.skills container -->
-  <section class="feedback form-container">
-    <h2 class="feedback-title">Готов обсудить проект...</h2>
-    <form action="#" class="form">
-      <div class="input-group">
-        <label for="userName" class="input-label">Имя</label>
-        <input id="userName" type="text" class="input">
-      </div>
-      <div class="input-group">
-        <label for="userEmail" class="input-label">Email</label>
-        <input id="userEmail" type="text" class="input">
-      </div>
-      <div class="input-group">
-        <label for="userMessage" class="input-label">Сообщение</label>
-        <textarea id="userMessage" cols="30" rows="10" class="input textarea"></textarea>
-      </div>
-      <div class="button-group">
-        <button type="submit" class="submit-button">
-          <img src="img/Icons/send.svg" alt="send-icon" class="cv-icon">
-          <span class="cv-text">Отправить</span>
-        </button>
-      </div>
-    </form>
+  <section class="feedback" id="feedback">
+    <img src="img/hand.png" alt="hand" class="feedback-hand">
+    <div class="form-container">
+      <h2 class="feedback-title">Готов обсудить проект...</h2>
+      <form action="#" class="form">
+        <div class="input-group">
+          <label for="userName" class="input-label">Имя</label>
+          <input id="userName" type="text" class="input">
+        </div>
+        <div class="input-group">
+          <label for="userEmail" class="input-label">Email</label>
+          <input id="userEmail" type="text" class="input">
+        </div>
+        <div class="input-group">
+          <label for="userMessage" class="input-label">Сообщение</label>
+          <textarea id="userMessage" cols="30" rows="10" class="input textarea"></textarea>
+        </div>
+        <div class="button-group">
+          <button type="submit" class="submit-button">
+            <img src="img/Icons/send.svg" alt="send-icon" class="cv-icon">
+            <span class="cv-text">Отправить</span>
+          </button>
+        </div>
+      </form>
+    </div>
   </section>
   <!-- /.feedback container -->
   <footer class="footer container">
