--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="img/logo.svg" alt="Logo" class="logo">
     <nav class="nav">
       <ul class="nav-list">
-        <li class="nav-item"><a href="/index.html" class="nav-link active">Главная</a></li>
+        <li class="nav-item"><a href="#header" class="nav-link active">Главная</a></li>
         <li class="nav-item"><a href="#portfolio" class="nav-link">Проекты</a></li>
         <li class="nav-item"><a href="#developer" class="nav-link">Обо мне</a></li>
         <li class="nav-item"><a href="#feedback" class="nav-link">Связаться</a></li>
@@ -40,7 +40,7 @@
           <li class="social-item"><a href="#" class="social-link"><img src="img/Icons/stackoverflow.svg" alt="stackoverflow" class="social-logo"></a></li>
           <li class="social-item"><a href="#" class="social-link"><img src="img/Icons/youtube.svg" alt="youtube" class="social-logo"></a></li>
         </ul>
-        <a href="#" class="cv-download" download>
+        <a href="CV.pdf" class="cv-download" download>
           <img src="img/Icons/download.svg" alt="download-icon" class="cv-icon">
           <span class="cv-text">Скачать резюме</span>
         </a>
